fixed a spacing issue for dl elements

--- a/mgsa.css
+++ b/mgsa.css
@@ -27,6 +27,10 @@ p
     margin: 0.125em 0 0.125em 0;
 }
 
+dl
+{
+    margin: 0.5em 0 0 0;
+}
 dl dt
 {
     font-weight: bold;
